Feat/novu notification (#69)
* :sparkles: switch Magicbell notification for Novu (backend part)

* :sparkles: switch Magicbell notification for Novu (front part)

* :fire: remove Magicbell packages, files and codes

* :art: add and update notifications email-template in docs

* :bug: fix for notification not being marked as seen and read when redirect

* :sparkles: add translation on notification center to use user's locale

* :sparkles: add Novu subscriber update

* :sparkles: add event trigger on email change to update Novu subscriber too

* :bug: fix so that locale passed to Novu is in the correct format

* :art: update MeetingStarted email notification template, add translation using variables, refacto and improve notification code

* :package: add clean package-lock after rebase

* :recycle: improve notification code for coming implementations

* :recycle: refacto locale update (add locale update on db, use event trigger on locale update, add usage of appropriate locale)

* :recycle: refacto notification to have translation serverside + improve code

* :recycle: improve function typo

* :fire: remove useless function definition

* :recycle: use useUserLocale instead of api call

* :recycle: improve security for org data in sendMeetingStartedNotification

* :recycle: refacto actionUrl as const

* :recycle: use client useMarkNotificationsAs hook instead api call

* :recycle: remove event trigger and identify to use only identify/update already done on notification trigger

* :memo: update docs for Novu

* Commit changes in generated files after rebase

* :recycle: display error in console not just "Error"

* :recycle: improve i18n language update management

* :bug: fix regression in expected behavior for MeetingAttendeesList

--- a/functions/package.json
+++ b/functions/package.json
@@ -4,8 +4,8 @@
     "codegen": "graphql-codegen --config _codegen.ts"
   },
   "dependencies": {
-    "@magicbell/core": "^5.0.3",
     "@nhost/nhost-js": "^1.6.0",
+    "@novu/node": "^0.11.0",
     "algoliasearch": "^4.14.2",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
