--- a/nhost/metadata/databases/default/tables/auth_users.yaml
+++ b/nhost/metadata/databases/default/tables/auth_users.yaml
@@ -155,6 +155,7 @@ update_permissions:
     permission:
       columns:
         - display_name
+        - locale
       filter:
         id:
           _eq: X-Hasura-User-Id
