--- a/functions/.env.template
+++ b/functions/.env.template
@@ -4,5 +4,5 @@ SECURITY_INVITATION_TOKEN=
 ALGOLIA_APP_ID=
 ALGOLIA_SEARCH_API_KEY=
 ALGOLIA_ADMIN_API_KEY=
-MAGICBELL_API_KEY=
-MAGICBELL_API_SECRET=
+NOVU_APP_ID=
+NOVU_API_KEY=
