--- a/render.yaml
+++ b/render.yaml
@@ -51,5 +51,5 @@ services:
         value: 0.0.0.0
       - key: PORT
         value: 1234
-    autoDeploy: true
+    autoDeploy: false
     pullRequestPreviewsEnabled: false
