--- a/functions/package.json
+++ b/functions/package.json
@@ -7,6 +7,7 @@
     "@nhost/nhost-js": "^1.6.0",
     "@novu/node": "^0.11.0",
     "algoliasearch": "^4.14.2",
+    "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
