:recycle: use only events for meeting invited notification

--- a/nhost/metadata/databases/default/tables/public_meeting.yaml
+++ b/nhost/metadata/databases/default/tables/public_meeting.yaml
@@ -130,9 +130,11 @@ event_triggers:
       paused: true
       schedule: 0 0 * * *
       timeout: 60
-  - name: update-meeting-participants
+  - name: send-meeting-invited-notification
     definition:
       enable_manual: false
+      insert:
+        columns: '*'
       update:
         columns:
           - circleId
@@ -142,7 +144,7 @@ event_triggers:
       interval_sec: 10
       num_retries: 0
       timeout_sec: 60
-    webhook: '{{NHOST_BACKEND_URL}}/v1/functions/routes/events/updateMeetingParticipants'
+    webhook: '{{NHOST_BACKEND_URL}}/v1/functions/routes/events/sendMeetingInvitedNotification'
     headers:
       - name: x-nhost-webhook-secret
         value_from_env: NHOST_WEBHOOK_SECRET
