Fix hasura permissions

--- a/nhost/metadata/databases/default/tables/public_meeting_recurring.yaml
+++ b/nhost/metadata/databases/default/tables/public_meeting_recurring.yaml
@@ -87,19 +87,7 @@ update_permissions:
                       _eq: Admin
                   - role:
                       _eq: Owner
-      check:
-        org:
-          members:
-            _and:
-              - userId:
-                  _eq: X-Hasura-User-Id
-              - _or:
-                  - role:
-                      _eq: Member
-                  - role:
-                      _eq: Admin
-                  - role:
-                      _eq: Owner
+      check: {}
 delete_permissions:
   - role: user
     permission:
