--- a/nhost/metadata/databases/default/tables/public_thread_activity.yaml
+++ b/nhost/metadata/databases/default/tables/public_thread_activity.yaml
@@ -127,9 +127,10 @@ delete_permissions:
                   _and:
                     - userId:
                         _eq: X-Hasura-User-Id
-                    - role:
-                        _eq: Admin
-                    - role:
-                        _eq: Owner
+                    - _or:
+                        - role:
+                            _eq: Member
+                        - role:
+                            _eq: Admin
           - userId:
               _eq: X-Hasura-User-Id
