--- a/nhost/metadata/databases/default/tables/public_thread_member_status.yaml
+++ b/nhost/metadata/databases/default/tables/public_thread_member_status.yaml
@@ -65,17 +65,4 @@ update_permissions:
                         _eq: Admin
                     - role:
                         _eq: Owner
-      check:
-        thread:
-          org:
-            members:
-              _and:
-                - userId:
-                    _eq: X-Hasura-User-Id
-                - _or:
-                    - role:
-                        _eq: Member
-                    - role:
-                        _eq: Admin
-                    - role:
-                        _eq: Owner
+      check: {}
