--- a/nhost/metadata/databases/default/tables/public_task_view.yaml
+++ b/nhost/metadata/databases/default/tables/public_task_view.yaml
@@ -56,16 +56,4 @@ update_permissions:
                       _eq: Admin
                   - role:
                       _eq: Owner
-      check:
-        org:
-          members:
-            _and:
-              - userId:
-                  _eq: X-Hasura-User-Id
-              - _or:
-                  - role:
-                      _eq: Member
-                  - role:
-                      _eq: Admin
-                  - role:
-                      _eq: Owner
+      check: {}
