Remove select permission filter from tables with no private data

--- a/nhost/metadata/databases/default/tables/public_circle_member.yaml
+++ b/nhost/metadata/databases/default/tables/public_circle_member.yaml
@@ -39,12 +39,7 @@ select_permissions:
         - createdAt
         - id
         - memberId
-      filter:
-        circle:
-          org:
-            members:
-              userId:
-                _eq: X-Hasura-User-Id
+      filter: {}
       allow_aggregations: true
 update_permissions:
   - role: user
