Fix rrule in recurring meetings

--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -21,11 +21,5 @@
       "@search/*": ["./_search/*"]
     }
   },
-  "include": [
-    "./",
-    "../shared",
-    "_shared/model/task.ts",
-    "_shared/model/thread_activity.ts",
-    "_shared/model/meeting_step.ts"
-  ]
+  "include": ["./", "../shared"]
 }
