Remove select permission from circle table

--- a/nhost/metadata/databases/default/tables/public_circle.yaml
+++ b/nhost/metadata/databases/default/tables/public_circle.yaml
@@ -56,11 +56,7 @@ select_permissions:
         - orgId
         - parentId
         - roleId
-      filter:
-        org:
-          members:
-            userId:
-              _eq: X-Hasura-User-Id
+      filter: {}
       allow_aggregations: true
 update_permissions:
   - role: user
