Update lexical and fix ObjectDiff with editor state values

--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "@fullcalendar/timegrid": "^6.1.5",
     "@hello-pangea/dnd": "^16.2.0",
     "@hookform/resolvers": "^2.8.8",
-    "@lexical/markdown": "^0.8.0",
-    "@lexical/react": "^0.8.0",
+    "@lexical/headless": "^0.9.1",
+    "@lexical/markdown": "^0.9.1",
+    "@lexical/react": "^0.9.1",
     "@nhost/react": "^2.0.11",
     "@nhost/react-apollo": "^5.0.13",
     "@novu/notification-center": "^0.11.0",
@@ -56,7 +57,7 @@
     "i18next": "^21.6.16",
     "i18next-browser-languagedetector": "^6.1.4",
     "katex": "^0.16.4",
-    "lexical": "^0.8.0",
+    "lexical": "^0.9.1",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "lodash.throttle": "^4.1.1",
