--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "diff": "^5.0.0",
     "downshift": "^6.1.7",
     "easy-peasy": "^5.2.0",
+    "firebase": "^9.18.0",
     "focus-visible": "^5.2.0",
     "framer-motion": "^8.1.7",
     "graphql": "^16.6.0",
@@ -119,8 +120,10 @@
     "rollup-plugin-visualizer": "^5.9.0",
     "typescript": "^4.6.2",
     "vite": "^4.1.1",
+    "vite-plugin-pwa": "^0.14.6",
     "vite-plugin-svgr": "^2.4.0",
     "vite-tsconfig-paths": "^4.0.3",
-    "vitest": "^0.26.3"
+    "vitest": "^0.26.3",
+    "workbox-window": "^6.5.4"
   }
 }
