--- a/package.json
+++ b/package.json
@@ -112,8 +112,11 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "patch-package": "^6.5.0",
     "prettier": "^2.6.0",
     "rollup-plugin-terser": "^7.0.2",
