Feat/thread message notification (#88)
* :sparkles: add thread notifications

* :arrow_up: update novu packages

* :recycle: improve code

* :sparkles: add email for all notifications

* :recycle: add clean generated files + some update after rebase

* :recycle: add clean generated files after rebase

* :recycle: refacto for reviews

* :recycle: remove useless code after reviews

--- a/nhost/metadata/databases/default/tables/public_thread_activity.yaml
+++ b/nhost/metadata/databases/default/tables/public_thread_activity.yaml
@@ -134,3 +134,24 @@ delete_permissions:
                             _eq: Admin
           - userId:
               _eq: X-Hasura-User-Id
+event_triggers:
+  - name: send-thread-activity-notification
+    definition:
+      enable_manual: false
+      insert:
+        columns: '*'
+    retry_conf:
+      interval_sec: 10
+      num_retries: 0
+      timeout_sec: 60
+    webhook: '{{NHOST_BACKEND_URL}}/v1/functions/routes/events/sendThreadActivityNotification'
+    headers:
+      - name: x-nhost-webhook-secret
+        value_from_env: NHOST_WEBHOOK_SECRET
+    cleanup_config:
+      batch_size: 10000
+      clean_invocation_logs: false
+      clear_older_than: 168
+      paused: true
+      schedule: 0 0 * * *
+      timeout: 60
