:wrench: add eslint react hook rule

--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "patch-package": "^6.5.0",
     "prettier": "^2.6.0",
