Fix node version for collab in render blueprint

--- a/render.yaml
+++ b/render.yaml
@@ -47,6 +47,8 @@ services:
     buildCommand: npm i yjs y-websocket
     startCommand: npx y-websocket
     envVars:
+      - key: NODE_VERSION
+        value: 18
       - key: HOST
         value: 0.0.0.0
       - key: PORT
