--- a/functions/package.json
+++ b/functions/package.json
@@ -15,9 +15,11 @@
     "i18next": "^21.6.16",
     "ical-generator": "^3.6.1",
     "lodash.isequal": "^4.5.0",
+    "multer": "^1.4.5-lts.1",
     "node-mailjet": "^5.1.1",
     "rrule": "^2.7.2",
     "stripe": "^11.7.0",
+    "xlsx": "^0.18.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -30,6 +32,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.14",
     "@types/lodash.isequal": "^4.5.6",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.8.3",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
