fix relationships thread and combine subscription

--- a/nhost/metadata/databases/default/tables/public_thread.yaml
+++ b/nhost/metadata/databases/default/tables/public_thread.yaml
@@ -21,6 +21,13 @@ array_relationships:
         remote_table:
           name: thread_activity
           schema: public
+  - name: logs
+    using:
+      foreign_key_constraint_on:
+        column: threadId
+        table:
+          name: log
+          schema: public
   - name: member_status
     using:
       foreign_key_constraint_on:
