--- a/nhost/metadata/databases/default/tables/public_thread.yaml
+++ b/nhost/metadata/databases/default/tables/public_thread.yaml
@@ -54,6 +54,7 @@ insert_permissions:
       columns:
         - archived
         - circleId
+        - createdAt
         - initiatorMemberId
         - orgId
         - participantsMembersIds
@@ -86,6 +87,9 @@ update_permissions:
       columns:
         - archived
         - circleId
+        - id
+        - initiatorMemberId
+        - orgId
         - participantsMembersIds
         - participantsScope
         - status
