--- a/nhost/metadata/databases/default/tables/public_log.yaml
+++ b/nhost/metadata/databases/default/tables/public_log.yaml
@@ -14,6 +14,9 @@ object_relationships:
   - name: org
     using:
       foreign_key_constraint_on: orgId
+  - name: thread
+    using:
+      foreign_key_constraint_on: threadId
   - name: user
     using:
       foreign_key_constraint_on: userId
@@ -47,23 +50,25 @@ insert_permissions:
         - memberId
         - memberName
         - orgId
+        - threadId
         - userId
 select_permissions:
   - role: user
     permission:
       columns:
-        - canceled
-        - changes
-        - display
-        - memberName
-        - createdAt
         - cancelLogId
         - cancelMemberId
         - cancelMemberName
+        - canceled
+        - changes
+        - createdAt
+        - display
         - id
         - meetingId
         - memberId
+        - memberName
         - orgId
+        - threadId
         - userId
       filter:
         org:
