--- a/nhost/metadata/databases/default/tables/public_thread.yaml
+++ b/nhost/metadata/databases/default/tables/public_thread.yaml
@@ -21,6 +21,13 @@ array_relationships:
         remote_table:
           name: thread_activity
           schema: public
+  - name: logs
+    using:
+      foreign_key_constraint_on:
+        column: threadId
+        table:
+          name: log
+          schema: public
   - name: member_status
     using:
       foreign_key_constraint_on:
@@ -51,6 +58,7 @@ insert_permissions:
         - orgId
         - participantsMembersIds
         - participantsScope
+        - status
         - title
 select_permissions:
   - role: user
@@ -64,6 +72,7 @@ select_permissions:
         - orgId
         - participantsMembersIds
         - participantsScope
+        - status
         - title
       filter:
         org:
@@ -79,6 +88,7 @@ update_permissions:
         - circleId
         - participantsMembersIds
         - participantsScope
+        - status
         - title
       filter:
         org:
