--- a/nhost/metadata/databases/default/tables/public_thread_activity.yaml
+++ b/nhost/metadata/databases/default/tables/public_thread_activity.yaml
@@ -135,6 +135,30 @@ delete_permissions:
           - userId:
               _eq: X-Hasura-User-Id
 event_triggers:
+  - name: index-thread-activity
+    definition:
+      delete:
+        columns: '*'
+      enable_manual: false
+      insert:
+        columns: '*'
+      update:
+        columns: '*'
+    retry_conf:
+      interval_sec: 10
+      num_retries: 3
+      timeout_sec: 60
+    webhook: '{{NHOST_BACKEND_URL}}/v1/functions/routes/indexEntity'
+    headers:
+      - name: x-nhost-webhook-secret
+        value_from_env: NHOST_WEBHOOK_SECRET
+    cleanup_config:
+      batch_size: 10000
+      clean_invocation_logs: false
+      clear_older_than: 168
+      paused: true
+      schedule: 0 0 * * *
+      timeout: 60
   - name: send-thread-activity-notification
     definition:
       enable_manual: false
