--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@stripe/stripe-js": "^1.46.0",
     "@tanstack/react-table": "^8.7.9",
     "algoliasearch": "^4.14.2",
+    "crisp-sdk-web": "^1.0.18",
     "crypto-hash": "^2.0.1",
     "d3": "^7.3.0",
     "d3-hierarchy": "^3.1.1",
