--- a/nhost/metadata/databases/default/tables/tables.yaml
+++ b/nhost/metadata/databases/default/tables/tables.yaml
@@ -20,6 +20,7 @@
 - "!include public_member.yaml"
 - "!include public_member_role.yaml"
 - "!include public_member_scope.yaml"
+- "!include public_news.yaml"
 - "!include public_old_id.yaml"
 - "!include public_org.yaml"
 - "!include public_org_file.yaml"
