--- a/nhost/metadata/databases/default/tables/public_skill.yaml
+++ b/nhost/metadata/databases/default/tables/public_skill.yaml
@@ -1,30 +1,26 @@
 table:
-  name: skill_category
+  name: skill
   schema: public
-array_relationships:
-  - name: skills
+object_relationships:
+  - name: category
     using:
-      foreign_key_constraint_on:
-        column: categoryId
-        table:
-          name: skill
-          schema: public
+      foreign_key_constraint_on: categoryId
 insert_permissions:
   - role: user
     permission:
       check: {}
       columns:
+        - categoryId
         - description
         - name
-        - orgId
 select_permissions:
   - role: user
     permission:
       columns:
+        - categoryId
         - description
         - id
         - name
-        - orgId
       filter: {}
 update_permissions:
   - role: user
