member skill level table

--- a/nhost/metadata/databases/default/tables/tables.yaml
+++ b/nhost/metadata/databases/default/tables/tables.yaml
@@ -20,6 +20,7 @@
 - "!include public_member.yaml"
 - "!include public_member_role.yaml"
 - "!include public_member_scope.yaml"
+- "!include public_member_skill_level.yaml"
 - "!include public_old_id.yaml"
 - "!include public_org.yaml"
 - "!include public_org_file.yaml"
@@ -27,6 +28,7 @@
 - "!include public_role.yaml"
 - "!include public_skill.yaml"
 - "!include public_skill_category.yaml"
+- "!include public_skill_level.yaml"
 - "!include public_subscription_payment_status.yaml"
 - "!include public_subscription_plan_type.yaml"
 - "!include public_task.yaml"
