--- a/functions/package.json
+++ b/functions/package.json
@@ -8,6 +8,7 @@
     "@novu/node": "^0.16.2",
     "algoliasearch": "^4.14.2",
     "axios": "^1.3.4",
+    "crypto-hash": "^2.0.1",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
@@ -16,6 +17,7 @@
     "ical-generator": "^3.6.1",
     "lodash.isequal": "^4.5.0",
     "multer": "^1.4.5-lts.1",
+    "node-html-markdown": "^1.3.0",
     "node-mailjet": "^5.1.1",
     "rrule": "^2.7.2",
     "stripe": "^11.7.0",
