--- a/nhost/metadata/databases/default/tables/public_news.yaml
+++ b/nhost/metadata/databases/default/tables/public_news.yaml
@@ -42,6 +42,7 @@ select_permissions:
   - role: user
     permission:
       columns:
+        - createdAt
         - decisionId
         - id
         - meetingId
@@ -52,3 +53,4 @@ select_permissions:
           members:
             userId:
               _eq: X-Hasura-User-Id
+      allow_aggregations: true
