--- a/nhost/metadata/databases/default/tables/auth_users.yaml
+++ b/nhost/metadata/databases/default/tables/auth_users.yaml
@@ -143,6 +143,7 @@ select_permissions:
         - is_anonymous
         - last_seen
         - locale
+        - metadata
         - new_email
         - phone_number
         - phone_number_verified
@@ -156,6 +157,7 @@ update_permissions:
       columns:
         - display_name
         - locale
+        - metadata
       filter:
         id:
           _eq: X-Hasura-User-Id
