--- a/functions/package.json
+++ b/functions/package.json
@@ -19,6 +19,7 @@
     "multer": "^1.4.5-lts.1",
     "node-html-markdown": "^1.3.0",
     "node-mailjet": "^5.1.1",
+    "openai": "^3.3.0",
     "rrule": "^2.7.2",
     "stripe": "^11.7.0",
     "xlsx": "^0.18.5",
