--- a/nhost/metadata/databases/default/tables/tables.yaml
+++ b/nhost/metadata/databases/default/tables/tables.yaml
@@ -26,6 +26,7 @@
 - "!include public_org_file.yaml"
 - "!include public_org_subscription.yaml"
 - "!include public_role.yaml"
+- "!include public_role_ai.yaml"
 - "!include public_subscription_payment_status.yaml"
 - "!include public_subscription_plan_type.yaml"
 - "!include public_task.yaml"
