--- a/nhost/metadata/databases/default/tables/public_circle_member.yaml
+++ b/nhost/metadata/databases/default/tables/public_circle_member.yaml
@@ -30,6 +30,22 @@ insert_permissions:
         - circleId
         - memberId
 select_permissions:
+  - role: public
+    permission:
+      columns:
+        - archived
+        - circleId
+        - createdAt
+        - id
+        - memberId
+      filter:
+        _and:
+          - archived:
+              _eq: false
+          - member:
+              org:
+                shareMembers:
+                  _eq: true
   - role: user
     permission:
       columns:
