--- a/nhost/metadata/databases/default/tables/public_member.yaml
+++ b/nhost/metadata/databases/default/tables/public_member.yaml
@@ -47,6 +47,22 @@ insert_permissions:
         - picture
         - workedMinPerWeek
 select_permissions:
+  - role: public
+    permission:
+      columns:
+        - archived
+        - description
+        - id
+        - name
+        - orgId
+        - picture
+      filter:
+        _and:
+          - archived:
+              _eq: false
+          - org:
+              shareMembers:
+                _eq: true
   - role: user
     permission:
       columns:
