--- a/nhost/metadata/databases/default/tables/public_role.yaml
+++ b/nhost/metadata/databases/default/tables/public_role.yaml
@@ -45,6 +45,25 @@ insert_permissions:
         - purpose
         - singleMember
 select_permissions:
+  - role: public
+    permission:
+      columns:
+        - archived
+        - base
+        - colorHue
+        - id
+        - link
+        - name
+        - orgId
+        - purpose
+        - singleMember
+      filter:
+        _and:
+          - archived:
+              _eq: false
+          - org:
+              shareOrg:
+                _eq: true
   - role: user
     permission:
       columns:
