--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "lint:format": "prettier --loglevel warn --write \"./src/**/*.{js,jsx,ts,tsx,css,md,json}\" ",
     "test": "vitest",
     "codegen": "graphql-codegen",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "postinstall": "patch-package"
   },
   "dependencies": {
@@ -86,13 +86,13 @@
     "@graphql-codegen/typescript": "^2.7.3",
     "@graphql-codegen/typescript-operations": "^2.5.3",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
-    "@storybook/addon-actions": "^6.5.15",
-    "@storybook/addon-essentials": "^6.5.15",
-    "@storybook/addon-interactions": "^6.5.15",
-    "@storybook/addon-links": "^6.5.15",
-    "@storybook/builder-vite": "^0.4.1",
-    "@storybook/react": "^6.5.15",
-    "@storybook/testing-library": "0.0.13",
+    "@storybook/addon-actions": "^7.2.2",
+    "@storybook/addon-essentials": "^7.2.2",
+    "@storybook/addon-interactions": "^7.2.2",
+    "@storybook/addon-links": "^7.2.2",
+    "@storybook/react": "^7.2.2",
+    "@storybook/react-vite": "^7.2.2",
+    "@storybook/testing-library": "0.2.0",
     "@types/d3": "^7.1.0",
     "@types/d3-hierarchy": "^3.0.2",
     "@types/diff": "^5.0.2",
@@ -107,17 +107,18 @@
     "@types/react-transition-group": "^4.4.5",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
-    "@vitejs/plugin-react": "^4.0.4",
+    "@vitejs/plugin-react": "^3.0.1",
     "babel-loader": "^8.3.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-storybook": "^0.6.13",
     "patch-package": "^6.5.0",
     "prettier": "^2.6.0",
-    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "^5.9.2",
+    "storybook": "^7.2.2",
     "typescript": "^5.0.4",
     "vite": "^4.4.9",
     "vite-plugin-svgr": "^3.2.0",
